--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-media-recorder": "^1.6.6",
+    "react-router-dom": "^6.20.0",
     "react-webcam": "^7.2.0"
   },
   "devDependencies": {
